force-app/main/default/objects/GiroSettings__c/GiroSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Giro Settings</label>
    <fields>
        <fullName>API_Base_URL__c</fullName>
        <defaultValue>"https://api.giro.or.kr"</defaultValue>
        <label>API Base URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Code__c</fullName>
        <label>Partner Code</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Code__c</fullName>
        <label>Classification Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giro_Number__c</fullName>
        <label>Giro Number</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Debug_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Debug Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_URL_Expiry_Minutes__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Payment URL Expiry Minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>