force-app/main/default/objects/GiroSettings__c/fields/API_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>API_Base_URL__c</fullName>
    <defaultValue>&quot;https://api.giro.or.kr&quot;</defaultValue>
    <label>API Base URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>