force-app/main/default/objects/GiroSettings__c/fields/Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>Classification_Code__c</fullName>
    <label>Classification Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>