force-app/main/default/objects/GiroSettings__c/fields/Giro_Number__c.field-meta.xml
<CustomField>
    <fullName>Giro_Number__c</fullName>
    <label>Giro Number</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>