force-app/main/default/objects/GiroSettings__c/fields/Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Code__c</fullName>
    <label>Partner Code</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>