force-app/main/default/objects/GiroSettings__c/fields/Payment_URL_Expiry_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Payment_URL_Expiry_Minutes__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Payment URL Expiry Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>